# file-manager

./: CMakeLists.txt  README.md  main.c
Libs/: CMakeLists.txt
Libs/manager/: CMakeLists.txt
Libs/manager/include/: manager.h
Libs/manager/src/: manager.c
Libs/terminal/: CMakeLists.txt
Libs/terminal/include/: terminal.h
Libs/terminal/src/: terminal.c
Libs/vector/: CMakeLists.txt
Libs/vector/include/: vector.h
sample-plugins/: CMakeLists.txt  compile.sh  txt-to-nano.c
